[package]
name = "gaviota-sys"
version = "0.1.28"
links = "gtb"
description = "Low level bindings for libgtb, a library for Gaviota tablebase probing"
repository = "https://github.com/niklasf/rust-gaviota-sys"
license = "MIT AND Zlib"
categories = ["external-ffi-bindings", "games"]
keywords = ["chess", "gaviota", "tablebase"]
exclude = ["tables/**/*.cp4"]
edition = "2024"

[build-dependencies]
bindgen = "0.72.1"
cc = "1.0.79"

[dependencies]
libz-sys = { version = "1.1.18", features = ["static"] }
